inclusão versão atualizada aula-bootstrap

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Quem somos</a>
+                    <a class="nav-link" href="#quemsomos">Quem somos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Parceiros</a>
+                    <a class="nav-link" href="#parceiros">Parceiros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Serviços</a>
+                    <a class="nav-link" href="#servicos">Serviços</a>
                 </li>
             </ul>
         </div>
@@ -28,7 +28,7 @@
 
         <section id="quemsomos">
             <div class="container-fluid quem-somos text-center margin">
-                <h3>Quem somos</h3>
+                <h1 class="margin">Quem somos</h1>
                 <img src="img/quem somos.jpg" class="rounded-circle" width="400" height="200">
                 <h3>“Um país que puta merda!”</h3>
             </div>
@@ -36,24 +36,53 @@
 
         <selection id="parceiros">
             <div class="container-fluid text-center margin parceiros">
-                <h3>Parceiros:</h3>
+                <h1 class="margin">Parceiros:</h1>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-4">
-                            <img src="img/parceiros2.jpg" class="rounded-circle" width="300" height="200">
+                            <img src="img/parceiros2.jpg" class="rounded-circle" width="300" height="300">
                         </div>
                         <div class="col-sm-4">
-                            <img src="img/parceiros.jpg"class="rounded-circle" width="300" height="200">
+                            <img src="img/parceiros.jpg"class="rounded-circle" width="300" height="300">
                         </div>
                         <div class="col-sm-4">
-                            <img src="img/parceiros3.jpg"class="rounded-circle" width="300" height="200">
+                            <img src="img/parceiros3.jpg"class="rounded-circle" width="300" height="300">
                         </div>
                     </div>
                 </div>
             </div>
         </selection>
 
+        <section id="servicos">
+            <div class="container-fluid text-center margin servicos">
+                <h1 class="margin">Serviços</h1>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <p>“O Brasil não é para principiantes.”</p>
+                            <img src="img/serviços.jpg" width="300" height="200">
+                        </div>
+                        <div class="col-sm-6">
+                            <p>“Como faz pra usar a GPS?!”</p>
+                            <img src="img/serviços2.jpg" width="300" height="200">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <footer>
+        <section id="umoferecimento">
+        <div class="container-fluid text-center bg-footer margin um-oferecimento">
+            <h4>Um oferecimento:</h4>
+            <div class="container-fluid text-center margin">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12" width="100" height="50">
+                            <h5 class="margin">“Se a verdade fosse um objeto, seria uma massinha de modelar. (André Dahmer)”</h5>
+                            <img src="img/footer.jpg">
+        </div>
+        </footer>
 
     </body>
 </html>
